<resources>
    <string name="app_name">Final Saul Requeno</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_producto">producto</string>
    <string name="registrate">Registrate</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate_si_no_tienes_cuenta">Registrate si no tienes cuenta</string>
    <string name="escoge_la_cantidad_del_producto_seleccionado">Escoge la cantidad del producto seleccionado</string>
    <string name="aceptar">Aceptar</string>
    <string name="pagar">Pagar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="validar_correo">Validar correo</string>
    <string name="buscar">Buscar</string>
    <string name="modificar_eliminar_producto">Modificar/Eliminar producto</string>
    <string name="nombre_de_producto">Nombre de producto</string>
    <string name="precio_de_producto">Precio de producto</string>
    <string name="categoria_del_producto">Categoria del producto</string>
    <string name="descripcion_del_producto">Descripcion del producto</string>
    <string name="marca_del_productor">Marca del productor</string>
    <string name="a_adir_imagen">Añadir Imagen</string>
    <string name="a_adir_producto">Añadir producto</string>
    <string name="eliminar_producto">Eliminar producto</string>
    <string name="modificar_producto">Modificar producto</string>
    <string name="el_total_de_su_compra_es">El total de su compra es:</string>
    <string name="direccion_de_envio">Direccion de envio</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="productos">Productos:</string>
    <string name="precio_total">Precio total:</string>
    <string name="fecha">Fecha:</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="inicia_sesion">Inicia sesion</string>
    <string name="inicio">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="usuario">Usuario</string>

    <string-array name="cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
