<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Activities.Register_Activity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Usuario"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_usuario"
                android:inputType="text"
                app:counterEnabled="true"
                app:counterMaxLength="15" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/Usuario" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/Email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/button"
            android:background="@drawable/button_reg_log"
            android:text="@string/registrate"
            android:layout_width="232dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.211"/>


    <TextView

            android:text="@string/ya_tienes_cuenta"
            android:textAlignment="center"
            android:layout_width="146dp"
            android:layout_height="26dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/textView3"/>
    <TextView

            android:id="@+id/Ya_tienes_cuenta"
            android:text="@string/inicia_sesion"
            android:textAlignment="center"
            android:layout_width="111dp"
            android:textColor="#E2355B"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/textView3"/>
</androidx.constraintlayout.widget.ConstraintLayout>