<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Activities.Login_Activity">


    <com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/textlayout"
            android:id="@+id/Email_Login"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtEmail_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" android:layout_marginEnd="10dp" android:layout_marginStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:background="@drawable/textlayout"
            android:id="@+id/Password_Login"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/Email_Login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtPassword_Login"
                android:layout_width="371dp"
                android:layout_height="46dp"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/Iniciar_Sesion"
            android:background="@drawable/button_reg_log"
            android:textColor="@android:color/white"
            android:text="@string/iniciar_sesion"
            android:layout_width="279dp"
            android:layout_height="61dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/Password_Login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
    />


    <TextView

            android:text="@string/no_tienes_cuenta"
            android:layout_width="143dp"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.988" android:gravity="center|left" android:id="@+id/textView2"/>
    <TextView

            android:id="@+id/Registrate"
            android:text="@string/registrate"
            android:layout_width="229dp"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#E2355B"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.988" android:gravity="center|left"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>