<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6e6e6">
        <TextView
                android:text="@string/precio_total"
                android:layout_width="179dp"
                android:layout_height="58dp"
                android:id="@+id/Pedido_Precio" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/productos"
                android:layout_width="167dp"
                android:layout_height="33dp"
                android:id="@+id/Pedido_Num" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/fecha"
                android:layout_width="167dp"
                android:layout_height="39dp"
                android:id="@+id/Pedido_Date" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/Pedido_Num"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/Pedido_Num"
                app:layout_constraintStart_toStartOf="@+id/Pedido_Num" app:layout_constraintHorizontal_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>